# docs/users.swagger.json
@@ -885,6 +885,69 @@
         ]
       }
     },
+    "/users/folders/price-calculator": {
+      "post": {
+        "tags": ["Users Folders"],
+        "summary": "folders price calculator",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "authorization",
+            "description": "Bearer Token",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": { "$ref": "#/definitions/UsersFolders" }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "examples": {
+              "application/json": {
+                "statusCode": 201,
+                "data": {
+                  "amount": 60000
+                },
+                "error": null
+              }
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity",
+            "examples": {
+              "application/json": {
+                "statusCode": 422,
+                "data": null,
+                "error": {
+                  "message": "اینپوت پیدا نشد",
+                  "details": [{ "size": ["سایز صفحه مشخص نشده است"] }]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "examples": {
+              "application/json": {
+                "statusCode": 400,
+                "data": null,
+                "error": {
+                  "message": "مشکلی پیش آمده است",
+                  "details": []
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/folders": {
       "post": {
         "tags": ["Users Folders"],
