# src/v1/routes/users/folders.route.js
@@ -9,6 +9,7 @@ const { users } = require('../../controllers')
 router.delete('/id/:id', users.folders.hardDelete)
 router.put('/id/:id', users.folders.update)
 router.get('/id/:id', users.folders.findOne)
+router.post('/price-calculator', users.folders.priceCalculator)
 router.post('/', users.folders.create)
 router.get('/', users.folders.findAll)
 
